--- a/jagaimo/.vscode-server/data/User/History/-354aa7cd/HQpZ.yml
+++ b/jagaimo/.vscode-server/data/User/History/-354aa7cd/HQpZ.yml
@@ -11,8 +11,8 @@ jobs:
     steps:
     - name: Create rails master key for build
       run: |
-        touch $HOME/master.key
-        cat run/secrets/master_key > $HOME/master.key
+        touch $GITHUB_WORKSPACE/master.key
+        echo ${{ secrets.RAILS_MASTER_KEY }} > $GITHUB_WORKSPACE/master.key
     - name: checkout pushed commit
       uses: actions/checkout@v2
       with:
