--- a/jagaimo/.vscode-server/data/User/History/-354aa7cd/YLC0.yml
+++ b/jagaimo/.vscode-server/data/User/History/-354aa7cd/YLC0.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Create rails master key for build
       run: |
         touch $HOME/master.key
-        cat run/secrets/master_key > $HOME/master.key
+        echo ${{ secrets.RAILS_MASTER_KEY }} > $GITHUB_WORKSPACE/master.key
     - name: checkout pushed commit
       uses: actions/checkout@v2
       with:
