--- a/jagaimo/.vscode-server/data/User/History/2bf14383/bjm2.yaml
+++ b/jagaimo/.vscode-server/data/User/History/2bf14383/bjm2.yaml
@@ -8,6 +8,9 @@ services:
   web:
     build:
       context: .
+      secrets:
+        - source: master_key
+          target: master.key
     command: >
       sh -c "
       rm -fr tmp/pids/ /home/jagaimo/tmp/pids/ &&
@@ -43,3 +46,6 @@ volumes:
   db:
   bundle:
 
+secrets:
+  master_key:
+    file: ./config/master.key
