--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/HfEb.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/HfEb.yml
@@ -13,7 +13,7 @@ jobs:
       env: master_key: ${{secrets.master_key}}
       run: |
         touch $HOME/master.key
-        echo master_key > $HOME/master.key
+        cat /run/secrets/master_key > $HOME/master.key
     - name: checkout pushed commit
       uses: actions/checkout@v2
       with:
