docker.ymlのenvの文法を変更

--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/2Rrz.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/2Rrz.yml
@@ -14,7 +14,7 @@ jobs:
         Master_Key: ${{secrets.master_key}}
       run: |
         touch $HOME/master.key
-        echo $Master_Key > $HOME/master.key
+        echo master_key > $HOME/master.key
     - name: checkout pushed commit
       uses: actions/checkout@v2
       with:
