--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/58A9.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/58A9.yml
@@ -4,15 +4,16 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-env:
-  RAILS_ENV: test
-  RAILS_MASTER_KEY: ${{secrets.master_key}}
 jobs:
   run-htmlbeautifier:
     name: Run htmlbeautifier
     runs-on: ubuntu-latest
     steps:
     - name: Create rails master key for build
+      env:
+        RAILS_MASTER_KEY: ${{secrets.master_key}}
+      run: |
+        touch $HOME/config/master.key
     - name: checkout pushed commit
       uses: actions/checkout@v2
       with:
