--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/Vrzg.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/Vrzg.yml
@@ -4,16 +4,16 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-env:
-  RAILS_ENV: test
-  RAILS_MASTER_KEY: ${{secrets.master_key}}
 jobs:
   run-htmlbeautifier:
     name: Run htmlbeautifier
     runs-on: ubuntu-latest
     steps:
     - name: Create rails master key for build
-    - name: checkout pushed commit
+      env:
+        RAILS_MASTER_KEY: ${{secrets.master_key}}
+      run: |
+        touch $HOME/config/master.key    - name: checkout pushed commit
       uses: actions/checkout@v2
       with:
         ref: ${{ github.event.pull_request.head.sha }}
