--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/0ZOQ.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/0ZOQ.yml
@@ -15,6 +15,8 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
     - name: run htmlbeautifier on docker compose
+      env:
+        RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
       run: |
         docker-compose build
         docker-compose run --rm web bin/setup
