--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/mOsO.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/mOsO.yml
@@ -15,6 +15,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
     - name: run htmlbeautifier on docker compose
+      env:
       run: |
         docker-compose build
         docker-compose run --rm web bin/setup
