--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/mfcJ.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/mfcJ.yml
@@ -15,8 +15,7 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
     - name: run htmlbeautifier on docker compose
-      env:
-        RAILS_ENV: test
+      env: RAILS_ENV
       run: |
         docker-compose build
         docker-compose run --rm web bin/setup
