--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/YmML.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/YmML.yml
@@ -38,6 +38,6 @@ jobs:
           RAILS_ENV: test
         run: |
           docker-compose build
-          docker-compose run -u root --rm web bin/setup
-          docker-compose run -u root --rm web bin/htmlbeautifier
+          docker-compose run --rm web bin/setup
+          docker-compose run --rm web bin/htmlbeautifier
           git diff --exit-code
