--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/BeFa.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/BeFa.yml
@@ -3,23 +3,22 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]    
+
 jobs:
   run-htmlbeautifier:
     name: Run htmlbeautifier
     runs-on: ubuntu-latest
     steps:
-    - name: Create rails master key for build
-      run: |
-        touch $HOME/master.key
-        cat /run/secrets/master_key > $HOME/master.key
     - name: checkout pushed commit
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         ref: ${{ github.event.pull_request.head.sha }}
     - name: run htmlbeautifier on docker compose
+      env:
+        RAILS_ENV: test
       run: |
-        DOCKER_BUILDKIT=1 docker-compose build
-        docker compose run --rm web bin/setup
-        docker compose run --rm web bin/htmlbeautifier
+        docker-compose build
+        docker-compose run --rm web bin/setup
+        docker-compose run --rm web bin/htmlbeautifier
         git diff --exit-code
