--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/dXT9.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/dXT9.yml
@@ -32,12 +32,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: ${{ inputs.git-log-depth }}
       - name: run htmlbeautifier on docker compose
         env:
           RAILS_ENV: test
         run: |
           docker-compose build
-          docker-compose run -u root --rm web bin/setup
-          docker-compose run -u root --rm web bin/htmlbeautifier
+          docker-compose run --rm web bin/setup
+          docker-compose run --rm web bin/htmlbeautifier
           git diff --exit-code
