--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/k57T.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/k57T.yml
@@ -24,7 +24,7 @@ jobs:
   run-htmlbeautifier:
     name: Run htmlbeautifier
     runs-on: ubuntu-latest
-    concurrency:
+    mconcurrency:
       group: build/${{ inputs.deploy-env }}
       cancel-in-progress: true
     steps:
@@ -32,12 +32,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          fetch-depth: ${{ inputs.git-log-depth }}
       - name: run htmlbeautifier on docker compose
         env:
           RAILS_ENV: test
         run: |
           docker-compose build
-          docker-compose run -u root --rm web bin/setup
-          docker-compose run -u root --rm web bin/htmlbeautifier
+          docker-compose run --rm web bin/setup
+          docker-compose run --rm web bin/htmlbeautifier
           git diff --exit-code
