--- a/jagaimo/.vscode-server/data/User/History/7c0fe323/x2tY.yml
+++ b/jagaimo/.vscode-server/data/User/History/7c0fe323/x2tY.yml
@@ -3,22 +3,19 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ]    
 jobs:
   run-htmlbeautifier:
     name: Run htmlbeautifier
     runs-on: ubuntu-latest
     steps:
-    - name: Create rails master key for build
-      env: 
-      run: |
-        touch $HOME/master.key
-        cat /run/secrets/master_key > $HOME/master.key
     - name: checkout pushed commit
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
       with:
         ref: ${{ github.event.pull_request.head.sha }}
     - name: run htmlbeautifier on docker compose
+      env:
+        RAILS_ENV: test
       run: |
         docker-compose build
         docker-compose run --rm web bin/setup
