--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -49,9 +49,9 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          sudo bundle exec rails_best_practices --without-color --silent . | reviewdog -efm="%f:%l - %m" -efm="%-G%.%#" \
-              -name="rails_best_practices" \
-              -reporter="github-pr-check" \
-              -filter-mode="nofilter" \
-              -fail-on-error="true" \
-              -level="info"
+          bundle exec rails_best_practices --without-color --silent . | reviewdog -efm="%f:%l - %m" -efm="%-G%.%#" \
+            -name="rails_best_practices" \
+            -reporter="github-pr-check" \
+            -filter-mode="nofilter" \
+            -fail-on-error="true" \
+            -level="info"
