--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/checkout@v4
       - name: rails_best_practices
         uses: blooper05/action-rails_best_practices@v1
-        with: github_token: ${{ secrets.github_token }}
-        reporter: github-pr-check
-        level: warning
+        with:
+          github_token: ${{ secrets.github_token }}
+          reporter: github-pr-check
+          level: warning
